Depuracion clase alien